2006-10-20  Alexis Sukrieh  <sukria@backup-manager.org>

	* Copyright headers and debugging messages
	  - lib/backup-methods.sh
	  - lib/dialog.sh
	  - lib/files.sh
	  - lib/md5sum.sh
	  - lib/sanitize.sh
	* If the GPG encryption feature is used, make sur we check if $archive.gpg
	exists instead of $archive when building archives.

2006-10-19  Alexis Sukrieh  <sukria@backup-manager.org>

	* doc/Makefile:
	  + Don't build the doc files if they are up-to-date.
	* lib/actions.sh:
	  + Copyright statement
	  + more debug messages
	  + tail -f logfiles 
	* lib/burning-methods.sh:
	  + Copyright statement
	  + more debug messages
	  + tail -f logfiles 
	* po/backup-manager.pot, po/*.po:
	  + Updates

2006-10-11  Alexis Sukrieh  <sukria@backup-manager.org>

	* doc/Makefile:
	  + Don't build the doc files if they are up-to-date.
	* lib/backup-methods.sh:
	  + lots of debug stuff, use tail_logfile() for outputing temp logfiles to
	  stderr if the switch --debug is enabled.
	* lib/dialog.sh:
	  + function tail_logfile().

2006-10-11  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/logger.sh:
	  + Exec the post-command when exiting.
	  (closes: #118)

2006-10-11  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/sanitize.sh:
	  + Make sure the $key we test is defined.
	  (closes: #110)

2006-10-11  Alexis Sukrieh  <sukria@backup-manager.org>

	* lib/backup-methods.sh:
	  + look for previous DAR archives in the last 30 ones possible.
	  (closes: #127).

2006-10-06  Alexis Sukrieh  <sukria@backup-manager.org>

	* Makefile:
	  + Added SVN properties to track some metadata.
	  + Uses Perl to find out where to install the perl modules
	    ($Config{sitelib}) thanks to Thomas Parmelan.
	  + Build backup-manager-purge.8 manpage as well as
	    backup-manager-upload.8.
	  + New default target `build' so that everything that needs to be built
	    is built when you issue `make'.
	* backup-manager:
	  + Back to the unreleased mode, version is 0.7.5+REV
